--- a/ui/login.html
+++ b/ui/login.html
@@ -1,5 +1,5 @@
 <div class="row loginform">
-    <div class="col col-sm-6 col-sm-offset-3 col col-md-4 col-sm-offset-4 ">
+    <div class="col col-sm-6 col-sm-offset-3 col col-md-4 col-md-offset-4 ">
     <form id="loginform" method="POST" action="dologin">
         <div class="form-group">
             <input type="text" class="form-control"  name="username" id="username"placeholder="User Name">
