--- a/ui/master.html
+++ b/ui/master.html
@@ -11,14 +11,14 @@
     <body>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <div class="container">
-        <include href="userinfo.html" />
+            <include href="userinfo.html" />
             <hr>
             <h1><a href="/">Fat Free Framework<br ><small>User Access Management</small></a></h1>
-        <hr>
-        <include href="{{ @view }}" />
-        <div class="footer row">
-             F3 UAM by iconic - Licenced under GNU v3 - Background Photo is courtesy of pexel
-        </div>
+            <hr>
+            <include href="{{ @view }}" />
+            <footer>
+                 F3 UAM by iconic - dimkasta - Licenced under GNU General Public License Version 3.0 - Background Photo is courtesy of pexel
+            </footer>
         </div>
 
 
