Demo site changes

--- a/ui/home.html
+++ b/ui/home.html
@@ -1,7 +1,7 @@
 <check if="{{ @SESSION.uamUser->username === 'guest' }}">
     <true>
         <div class="row homebuttons">
-            <a href="login" class="btn btn-lg btn-info ghost">Sign In</a> <a href="subscribe" class="btn btn-lg btn-warning ghost">Subscribe</a>
+            <a href="login" class="btn btn-lg btn-info ghost">Sign In</a> <a href="subscribe" class="btn btn-lg btn-warning ghost">Sign Up</a>
         </div>
     </true>
     <false>
