Demo site changes

--- a/ui/master.html
+++ b/ui/master.html
@@ -17,7 +17,7 @@
             <hr>
             <include href="{{ @view }}" />
             <footer>
-                 F3 UAM by iconic - dimkasta - Licenced under GNU General Public License Version 3.0 - Background Photo is courtesy of pexel
+                 F3 UAM by iconic and dimkasta - Licenced under GNU General Public License Version 3.0 - Background Photo is courtesy of pexel
             </footer>
         </div>
 
