--- a/ui/subscribe.html
+++ b/ui/subscribe.html
@@ -14,7 +14,7 @@
                 <input type="password" class="form-control" name="repeatpassword" id="repeatpassword" placeholder="Repeat Password">
             </div>
             <div class="form-buttons">
-                <a href="#" id="dosubscribe" class="btn btn-lg ghost btn-info">Subscribe</a>
+                <a href="#" id="dosubscribe" class="btn btn-lg ghost btn-info">Subscribe</a> <a href="/" id="dosubscribe" class="btn btn-lg ghost btn-info">Cancel</a>
             </div>
         </form>
     </div>
