--- a/ui/myprofile.html
+++ b/ui/myprofile.html
@@ -1,11 +1,21 @@
 <div class="row">
-    <div class="col-md-8 col-md-offset-2">
-        <div class="myprofile well clearfix">
-            <img class="avatar pull-left" src="{{ @SESSION.uamUser->gravatar }}">
-            <strong>Account Info:</strong><br>
-            Username: <br>
-            Email: <br>
-            Password: <br>
+    <div class="col-md-4 col-md-offset-4 myprofile well">
+        <div class=" clearfix">
+            <p>
+                <img class="avatar" src="{{ @SESSION.uamUser->gravatar }}">
+            </p>
+            <p>
+            {{ @SESSION.uamUser->username }} <br >
+            {{ @SESSION.uamUser->email }} <br >
+                </p>
+
         </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-4 col-md-offset-4 myprofile myprofileactions well">
+        <p>
+            <a href="#" class="btn btn-primary btn-sm">Change Password</a> <a href="#" class="btn btn-primary btn-sm">Change Email</a> <a href="#" class="btn btn-danger btn-sm">Close Account</a>
+        </p>
     </div>
 </div>
