--- a/ui/userinfo.html
+++ b/ui/userinfo.html
@@ -6,7 +6,7 @@
         <!--</repeat>-->
         <check if="{{ @SESSION.uamUser->isInRole(1) == true }}">
             <true>
-                <span class="pull-right"><a href="users">Users</a> | <a href="roles">Roles</a></span>
+                <span class="pull-right"><a href="users">Users</a> | <a href="roles">Roles</a> | <a href="profilefields">Profile Fields</a></span>
             </true>
         </check>
 
